# nix-demo

./: .gitmodules  README.md  deck.mdx  demo-setup.sh  demo.sh  flake.nix  index.html  package-lock.json  package.json  start.sh
demo/: demo.sh  flake.nix  simple.nix  start.sh
demo/fake-home/: .bash_history  .bashrc  .gitignore  mytools  sample-app  sample-service
demo/fake-home/.config/nix/: registry.json
demo/mytools/: flake.nix
demo/sample-app/: package.json
demo/sample-service/: .zsh  package.json  pyproject.toml  result
demo/vim/: override-node.vim
js/: bash-extended.language.js  index.js  shell-session.language.js
mytools/: flake.nix
presentation/: .eslintrc.cjs  README.md  package-lock.json  package.json  run-nix-demo.sh  tsconfig.json
presentation/backend/: package-lock.json  package.json  tsconfig.json
presentation/backend/src/: server.ts
presentation/frontend/: index.html  package-lock.json  package.json  tsconfig.json
presentation/frontend/src/: App.tsx  index.css
presentation/frontend/src/components/Terminal/: Terminal.tsx  useXTerm.ts
presentation/shared/: tsconfig.json
presentation/shared/src/: constants.ts
presentation/src/: App.tsx  slides.mdx
presentation/src/components/Terminal/: Terminal.tsx
presentation/src/theme/: default-theme.ts
sample-app/: .gitignore  flake.nix  lighttpd.conf
sample-service/: .gitignore  flake.nix
vim/: add-cowsay.vim  animate-edit.sh
